# fullstack-rust

./: Cargo.toml  LICENSE  README.md  build.sh  projectplan
Backend/: Cargo.toml  docker-compose.yml
Backend/src/: main.rs
Frontend/: Cargo.toml
Frontend/src/: lib.rs
src/: main.rs
