[package]
name = "frontend"
version = "0.1.0"
authors = ["Hod04"]
edition = "2018"
description = ""
license = "MIT/Apache"
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.16.2"
wasm-bindgen = "0.2.60"
wasm-bindgen-futures = "0.4.3"
serde = "1.0"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.35"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
